--- a/src/features/Company/ui/CompaniesTable/CompaniesTable.module.scss
+++ b/src/features/Company/ui/CompaniesTable/CompaniesTable.module.scss
@@ -33,6 +33,7 @@
 
 .bodyValue {
     font: var(--font-s);
+    overflow-wrap: break-word;
 }
 
 .header {
